# Nero-AI-

./: .dockerignore  .env.example  .env.test  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  backup_watcher.py  config.py  conftest.py  docker-compose.observability.yml  docker-compose.prod.yml  docker-compose.simple.yml  docker-compose.webhooks.yml  docker-compose.yml  docker-entrypoint.sh  init_git.bat  main.py  migrate_data.py  prometheus.yml  push_to_github.bat  pyproject.toml  requirements.txt  start_backup_watcher.bat  start_worker.bat
admin/: app.py
alembic/: README  env.py
database/: __init__.py  db.py  models.py
deploy/: nginx-webhook-docker.conf  nginx-webhook.conf
docs/: ARCHITECTURE.md  CICD.md  OBSERVABILITY.md  SECURITY.md  SETUP.md  WEBHOOKS.md
handlers/: __init__.py  admin.py  basic.py  callbacks.py  chat.py  chat_utils.py  commands.py  conversation.py  documents.py  media.py  payments.py
middlewares/: __init__.py  ban_check.py  rate_limit.py  usage_limit.py
scripts/: run_full_stack.bat  run_full_stack.sh  setup_env.bat  setup_env.sh  setup_webhooks.sh
services/: __init__.py  gemini.py  image_gen.py  llm_cascade.py  llm_common.py  memory.py  rag.py  speech.py
tasks/: __init__.py  broker.py  image_tasks.py  worker.py
tests/: conftest.py  mocks.py  test_admin_security.py  test_analytics.py  test_basic.py  test_calculator_command.py  test_callbacks.py  test_categorization_logic.py  test_chat.py  test_chat_optimization.py  test_chat_utils.py  test_commands.py  test_db_ids.py  test_documents.py  test_gemini_service.py  (+10 more)
(+17 files in other folders)
