[project]
name = "nero-ai-bot"
version = "1.0.0"
description = "Telegram AI bot Nero"
requires-python = ">=3.10"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
strict_optional = true
show_error_codes = true
ignore_missing_imports = true
# Строже для общих модулей LLM
[[tool.mypy.overrides]]
module = ["services.llm_common"]
disallow_untyped_defs = true

# Включить проверки типов для gemini и cascade (по желанию: pip install mypy && mypy services/)
[[tool.mypy.overrides]]
module = ["services.gemini", "services.llm_cascade"]
disallow_untyped_defs = false
warn_return_any = true
warn_unused_ignores = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
